# Saxo-Bank-Client

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.vim/: coc-settings.json
src/: container.py  main.py  saxo_client.py  socket_distributor.py  urls.py
src/auth/: server.py
src/data_models/: __init__.py  algorithmic_order_data_model.py  balance_information.py  json_model_base.py  place_related_or_oco_order.py  related_or_oco_order.py  token_data.py  trade_payload.py
src/handlers/: account_handler.py  handler_base.py  price_handler.py  subscription_handler.py  trade_handler.py  user_handler.py
src/models/: algorithmic_order_data_model.py  app_config.py  json_model_base.py  place_related_or_oco_order.py  related_or_oco_order.py  user_model.py
src/objects/: __init__.py  api_response.py  client_configuration.py
src/routes/: account.py  health.py  price.py  subscription.py  trade.py
src/streaming/: clients.py  connector.py  upstream.py
src/utils/: app_config_reader.py  database.py  number_utils.py  price.py  trade_handler.py
tests/: test_can_deserialise_related_or_oco_order.py  test_can_deserialise_trade_payload.py  test_price_utils.py
tests/data_models/: test_asset_type.py  test_balance_information.py  test_json_model_base.py  test_limit_order_trade_payload.py  test_market_order_trade_payload.py  test_place_related_or_oco_order_model.py  test_position_model.py  test_price_info.py  test_price_type.py  test_price_utils.py  test_related_or_oco_order_model.py  test_stop_loss.py  test_stop_loss_take_profit_payload.py  test_take_profit.py
(+23 files in other folders)
